--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.application.name=Mongo DB Example
 
+
+#Mongo Config
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=userdetails
+# spring.data.mongodb.username=root
+# spring.data.mongodb.password=root
+
+
+server.port=8081
