feat:added logic for service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.data.mongodb.database=userdetails
 
 
 server.port=8081
+
+
+# Preferred JSON mapper to use for HTTP message conversion.
+spring.http.converters.preferred-json-mapper=gson
+
