adding jwt token on registration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ server.port=8081
 # Preferred JSON mapper to use for HTTP message conversion.
 spring.http.converters.preferred-json-mapper=gson
 
+#Actuator
+
+management.security.enabled=false  
+
