changing jwt secret to RS 256

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.http.converters.preferred-json-mapper=gson
 
 management.security.enabled=false  
 
+# paths for secret keys
+jwt.private="/home/ashish/private_key.pem"
+jwt.public="/home/ashish/public_key.pem"
