--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.user</groupId>
 	<artifactId>BankAppliction</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>BankAppliction</name>
+	<name>BankApplication</name>
 	<description>Bank Application</description>
 	<properties>
 		<java.version>1.8</java.version>
@@ -75,6 +75,20 @@
 			<groupId>org.junit.vintage</groupId>
 			<artifactId>junit-vintage-engine</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.common</groupId>
+			<artifactId>hibernate-commons-annotations</artifactId>
+			<version>5.1.2.Final</version>
 		</dependency>
 	</dependencies>
 
