dockerize the application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=Mongo DB Example
 
 
 #Mongo Config
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=app_db
+# localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=userdetails
 # spring.data.mongodb.username=root
