feat:: adding kafka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Mongo DB Example
 
 
 #Mongo Config
-spring.data.mongodb.host=app_db
+#spring.data.mongodb.host=app_db
 # localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=userdetails
@@ -10,7 +10,7 @@ spring.data.mongodb.database=userdetails
 # spring.data.mongodb.password=root
 
 
-server.port=8081
+server.port=8082
 
 
 # Preferred JSON mapper to use for HTTP message conversion.
