--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,15 @@
 			<artifactId>hibernate-commons-annotations</artifactId>
 			<version>5.1.2.Final</version>
 		</dependency>
+				<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
